--- a/laundry_app/.gitignore
+++ b/laundry_app/.gitignore
@@ -33,6 +33,11 @@ migrate_working_dir/
 .pub/
 /build/
 
+# QUAN TRỌNG: Ẩn file .env để bảo mật
+.env
+.env.local
+.env.*.local
+
 # Symbolication related
 app.*.symbols
 
