--- a/laundry_app/pubspec.yaml
+++ b/laundry_app/pubspec.yaml
@@ -53,7 +53,8 @@ dependencies:
 
   # Functional Programming
   dartz: ^0.10.1
-
+  dio: ^5.4.0
+  flutter_dotenv: ^5.1.0
   http: ^1.2.0
 #  geolocator: ^12.0.0        # Lấy quyền + tọa độ hiện tại
   geocoding: ^3.0.0          # Chuyển địa chỉ → tọa độ / ngược lại
@@ -100,6 +101,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
+    - .env
     - lib/src/assets/
     - lib/src/assets/images/
 
