--- a/laundry_app/android/gradle.properties
+++ b/laundry_app/android/gradle.properties
@@ -1,3 +1,7 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+#org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx2G -XX:MaxMetaspaceSize=512m
+org.gradle.daemon=true
+org.gradle.parallel=false
+
 android.useAndroidX=true
 android.enableJetifier=true
