--- a/laundry_app/pubspec.yaml
+++ b/laundry_app/pubspec.yaml
@@ -50,10 +50,13 @@ dependencies:
   get: ^4.6.6
   carousel_slider: ^5.1.1
   smooth_page_indicator: ^1.0.0+2
-
+  get_it: ^7.6.4
+  shared_preferences: ^2.2.2
   # Functional Programming
   dartz: ^0.10.1
   dio: ^5.4.0
+  cookie_jar: ^4.0.8
+  dio_cookie_manager: ^3.1.1
   flutter_dotenv: ^5.1.0
   http: ^1.2.0
 #  geolocator: ^12.0.0        # Lấy quyền + tọa độ hiện tại
