--- a/laundry_app/pubspec.yaml
+++ b/laundry_app/pubspec.yaml
@@ -51,6 +51,11 @@ dependencies:
   carousel_slider: ^5.1.1
   smooth_page_indicator: ^1.0.0+2
   get_it: ^7.6.4
+  get_storage: ^2.1.1
+
+  image_picker: ^1.0.4
+  device_info_plus: ^9.1.0
+
   shared_preferences: ^2.2.2
   # Functional Programming
   dartz: ^0.10.1
